remove apt upgrade
Signed-off-by: Soldy <4786022+Soldy@users.noreply.github.com>

--- a/.github/workflows/pytest_test.yml
+++ b/.github/workflows/pytest_test.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
     - run: sudo apt update
     - run: sudo apt install -y python3-pytest python3-pip python3-selenium jq chromium-driver 
     - run: pytest-3 test.py
